--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "real-time-fund",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,10 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "@formspree/react": "^3.0.0",
+    "@dicebear/collection": "^9.3.1",
+    "@dicebear/core": "^9.3.1",
+    "@supabase/supabase-js": "^2.78.0",
+    "dayjs": "^1.11.19",
     "framer-motion": "^12.29.2",
-    "next": "14.2.5",
+    "next": "^16.1.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
+  },
+  "engines": {
+    "node": ">=20.9.0"
+  },
+  "devDependencies": {
+    "babel-plugin-react-compiler": "^1.0.0"
   }
 }
