--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fund-assistant",
-  "version": "0.2.0",
+  "name": "real-time-fund",
+  "version": "0.1.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
